@startuml
hide methods
left to right direction
skinparam classAttributeIconSize 0


class Company {
  -designation
}

class Employee {
	-employeeId;
	-name;
	-address;
	-phoneNumber;
	-email;
	-soc.
}

class SpecialistDoctor{
    -doctorIndexNumber
}

Company "1" -- "*" Employee : has >
SpecialistDoctor -left-|> Employee
Administrator -right-|> Employee



@enduml